crates/frust-tui/tests/snapshots/snapshots__log_styling_level_filter_chip_survives_narrow_paint_80x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: text
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                 ▶ Run    ⚒ Build 
━━━━━━━━                                                                        
                                                                                
 PROJECTS                │huddle:  1 ◌ desktop                                  
  ▸ huddle               │ E 12:04:22 [gradle] FAILURE: Build failed with an exc
                         │ E 12:04:24 [logcat] E/ActivityThread( 1234): Failed t
 DEVICES ↻ r             │                                                      
   none found            │                                                      
                         │                                                      
 SESSIONS                │                                                      
   huddle                │                                                      
   ▸ ◌ desktop           │                                                      
                         │                                                      
 ACTIONS                 │                                                      
   New project · n       │                                                      
   Add plugin · a        │                                                      
   Doctor · d            │                                                      
   Build · b             │                                                      
   Clean · c             │                                                      
   MCP off · M           │                                                      
                         │                                                      
                         │                                                      
                         │                                                      
                         │                                                      
                         │                                                      
                         │                                                      
                         │                                                      
                         │                                                      
                         │● follow  ·  wrap:off ⏷warn+ ·4      x stop · / search
● 1 running  │  r run · b build · d doctor · ⌘ palette · ? help        [mouse ✓]
