crates/frust-tui/tests/snapshots/snapshots__log_styling_level_filter_degraded_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(100, 30, &state)"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                     ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS                │huddle:  1 ◌ desktop                                                      
  ▸ huddle               │ E 12:04:22 [gradle] FAILURE: Build failed with an exception.             
                         │ E 12:04:24 [logcat] E/ActivityThread( 1234): Failed to find provider info
 DEVICES ↻ r             │                                                                          
   none found            │                                                                          
                         │                                                                          
 SESSIONS                │                                                                          
   huddle                │                                                                          
   ▸ ◌ desktop           │                                                                          
                         │                                                                          
 ACTIONS                 │                                                                          
   New project · n       │                                                                          
   Add plugin · a        │                                                                          
   Doctor · i            │                                                                          
   Build · b             │                                                                          
   Clean                 │                                                                          
   MCP off · M           │                                                                          
   DAP off · D           │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │● follow  ·  wrap:off ⏷warn+ ·4      x stop · f follow · w wrap · / search
● 1 running  │  r run · b build · d devtools · ⌘ palette · ? help                          [mouse ✓]
