crates/frust-tui/tests/snapshots/snapshots__log_styling_panic_backtrace_expanded_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(100, 30, &state)"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                     ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS                │huddle:  1 ◌ desktop                                                      
  ▸ huddle               │ E 12:05:02 [app]    thread 'main' panicked at src/main.rs:42:9:          
                         │                     called `Option::unwrap()` on a `None` value          
 DEVICES ↻ r             │                     ▾ stack backtrace:                                   
   none found            │                        0: my_app::state::reduce                          
                         │                                  at src/state.rs:88:13                   
 SESSIONS                │                        1: my_app::widget::on_tap                         
   huddle                │                                  at src/widget.rs:206:21                 
   ▸ ◌ desktop           │   12:05:03 [app]    app: recovering                                      
                         │                                                                          
 ACTIONS                 │                                                                          
   New project · n       │                                                                          
   Add plugin · a        │                                                                          
   Doctor · d            │                                                                          
   Build · b             │                                                                          
   Clean · c             │                                                                          
   MCP off · M           │                                                                          
   DAP off · D           │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │● follow  ·  wrap:off     x stop · f follow · w wrap · / search · l filter
● 1 running  │  r run · b build · d doctor · ⌘ palette · ? help                            [mouse ✓]
