crates/frust-tui/tests/snapshots/snapshots__mcp_panel_stopped_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(100, 30, &state)"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                     ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS                │                                                                          
  ▸ huddle               │  Dashboard                                                               
                         │  ━━━━━━━━━━                                                              
 DEVICES ↻ r             │                                                                          
   none found            │  No session running — start a run to open a log tab here.                
                         │                                                                          
 SESSIONS            ╭ MCP server ────────────────────────────────────────────╮                     
   none running      │                                                        │▓▓                   
                     │  ○ not running                                         │▓▓                   
 ACTIONS             │  start it to let an agent drive this workbench's       │▓▓                   
   New project · n   │  own sessions                                          │▓▓                   
   Add plugin · a    │                                                        │▓▓                   
   Doctor · d        │  no clients connected                                  │▓▓                   
   Build · b         │                                                        │▓▓                   
   Clean · c         │   Start     Close                                      │▓▓                   
   MCP off · M       │  s start · Esc close                                   │▓▓                   
                     ╰────────────────────────────────────────────────────────╯▓▓                   
                       ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓                   
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
● ready  │  r run · b build · d doctor · ⌘ palette · ? help                                [mouse ✓]
