crates/frust-tui/tests/snapshots/snapshots__palette_open_query_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(100, 30, &state)"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                     ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS                │                                                                          
  ▸ huddle               │  Dashboard                                                               
                         │  ━━━━━━━━━━                                                              
 DEVICES ↻ r        ╭ ⌘ Command palette ────────────────────────── [Esc] Close ╮                    
   none found       │                                                          │▓▓e.                
                    │  ❯ run█                                                  │▓▓                  
 SESSIONS           │  ──────────────────────────────────────────────────────  │▓▓                  
   none running     │  ▸ Run on device(s)…                                 r   │▓▓                  
                    │    Run on all devices            no devices discovered   │▓▓                  
 ACTIONS            │                                                          │▓▓                  
   New project · n  │                                                          │▓▓                  
   Add plugin · a   │                                                          │▓▓                  
   Doctor · i       │                                                          │▓▓                  
   Build · b        │                                                          │▓▓                  
   Clean · c        │                                                          │▓▓                  
   MCP off · M      │                                                          │▓▓                  
   DAP off · D      │                                                          │▓▓                  
                    │                                                          │▓▓                  
                    │                                                          │▓▓                  
                    │  ↑↓ move · Enter run · type to filter · Esc close        │▓▓                  
                    ╰──────────────────────────────────────────────────────────╯▓▓                  
                      ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓                  
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
● ready  │  r run · b build · i doctor · ⌘ palette · ? help                                [mouse ✓]
